# claude-code-deep-dive

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  architecture-overview.md  behavior-analysis.md  claude-code-deep-dive.md  comparison.md  data-flow-analysis.md  hidden-features.md  system-design.md
docs/: 01-architecture.md  02-agent-behavior.md  03-query-engine.md  04-agent-lifecycle.md  05-system-behavior.md  06-data-flow.md  07-system-design.md  09-comparison.md  10-error-handling.md  STRUCTURE.md  chapter-mapping.md  (+9 more)
mini-claude-code/: Dockerfile  README.md  agent.py  docker-compose.yml  main.py  memory.py  pyproject.toml  requirements.txt  tools.py
mini-claude-code/.github/workflows/: check_gate.py  eval.yml  generate_report.py
mini-claude-code/examples/: demo.sh
mini-claude-code/mock_api/: Dockerfile  data.json  server.py
mini-claude-code/tests/: README.md  __init__.py  conftest.py  judge_prompts.py  test_complex_audit.py  test_godot_audit_variants.py  test_judge_prompts.py  test_judge_result.py  test_llm_as_judge.py  test_parse_result.py  test_tools.py
mini-claude-code/tests/test_target/: README.md  config.py  event_stream.py  screen_capture.py  test_financial_audit.py  test_godot_audit.py
mini-claude-code/tests/test_target/financial_gold_premium/: gold_price_monitor.py
mini-claude-code/tests/test_target/gdscript_simple_game/: README.md  project.godot
mini-claude-code/tests/test_target/gdscript_simple_game/scenes/: player.tscn  world.tscn
mini-claude-code/tests/test_target/gdscript_simple_game/scripts/: backpack.gd  player.gd
(+3 files in other folders)
